@@ -4,6 +4,16 @@ Revision history for Perl distribution Test-Class-Moose
 
 0.73     2016-05-12 (TRIAL RELEASE)
 
+  [BACKWARDS INCOMPATIBILITIES]
+
+  * The run_test_shutdown_on_skip method is now named
+    run_control_methods_on_skip and applies to both test_shutdown and
+    test_teardown.
+
+  * The test_teardown method is no longer run when a test is skipped unless
+    run_control_methods_on_skip returns a true value. The test_teardown method
+    was never intended to be run unconditionally.
+
   [BUG FIXES]
 
   * Fix a test failure on Windows.
